[package]
name = "frontendengine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "frontendengine"


[dependencies]
unleash-yggdrasil = { version = "0.20.0" }
prost = "0.14"
# Only necessary if using Protobuf well-known types:
prost-types = "0.14"
serde = "1.0.228"
serde_json = "1.0.149"

[build-dependencies]
prost-build = "0.14.1"
